[package]
name = "bangumi_rss_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
actix-web = { version = "4.2.1", features = [
    "rustls",
    "compress-brotli",
    "compress-gzip",
    "compress-zstd",
] }
qstring = "0.7.2"
serde_json = "1.0.89"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
urlencoding = "2.1.2"
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.10.0"
reqwest = { version = "0.11.14", features = [
    "socks",
    "brotli",
    "gzip",
    "deflate",
    "rustls-tls",
] }
quick-xml = "0.30.0"
futures = "0.3.25"
url = "2.4.1"

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
